[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-fem"
version = "0.2.1"
authors = [{ name = "Nils Meyer", email = "nils.meyer@uni-a.de" }]
description = "Simple finite element assemblers with torch."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["finite elements", "automatic differentiation"]
requires-python = ">=3.10"
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dependencies = [
    "ipywidgets",
    "ipykernel",
    "matplotlib",
    "memory_profiler",
    "meshio",
    "meshzoo",
    "pyvista",
    "scipy",
    "tqdm",
    "torch",
    "trame",
    "trame-vuetify",
    "trame-vtk",
]

[project.urls]
source = "https://github.com/meyer-nils/torch-fem"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
torchfem = ["data/*.*"]