[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-fem"
version = "0.7.2"
authors = [{ name = "Nils Meyer", email = "nils.meyer@uni-a.de" }]
description = "GPU accelerated differentiable finite elements for solid mechanics with PyTorch."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["finite elements", "automatic differentiation"]
requires-python = ">=3.10"
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
dependencies = [
    "matplotlib",
    "meshio",
    "numpy",
    "pyamg",
    "pyvista",
    "scipy>=1.14",
    "torch>=2.0",
]

[project.optional-dependencies]
notebook = [
    "imageio",
    "ipykernel",
    "ipywidgets",
    "tqdm",
    "trame",
    "trame-vtk",
    "trame-vuetify",
]
dev = [
    "basedpyright",
    "black",
    "flake8",
    "isort",
    "pytest",
    "testbook",
]
all = [
    "torch-fem[notebook]",
    "torch-fem[dev]",
]

[project.urls]
source = "https://github.com/meyer-nils/torch-fem"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
torchfem = ["data/*.*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pyright]
pythonVersion = "3.10"
include = ["src/torchfem"]
typeCheckingMode = "basic"
reportMissingImports = false

[tool.pytest.ini_options]
markers = [
    "notebook: executes an example notebook (slow)",
]