[metadata]
name = torch-fem
version = 0.0.1
author = Nils Meyer
author_email = nils.meyer@uni-a.de
description = Simple finite element assemblers with torch
long_description = file: README.md
long_description_content_type = text/markdown
keywords = finite elements, automatic differentiation
license = MIT

[options]
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    torch
    meshio
    matplotlib
    pyvista
    trame
    ipywidgets

[options.packages.find]
where=src

[options.package_data]
example = examples/*.ipynb